modified:   one.html

--- a/one.html
+++ b/one.html
@@ -9,5 +9,13 @@
     <p id="para">This is a paragraph</p>
     <button id="btn">Click me</button>
     <script src="one.js"></script>
+
+    <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+    </ul>
 </body>
 </html>
