modified:   one.html

--- a/one.html
+++ b/one.html
@@ -11,11 +11,11 @@
     <script src="one.js"></script>
 
     <ul>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li class="list-item">One</li>
+        <li class="list-item">Two</li>
+        <li class="list-item">Three</li>
+        <li class="list-item">Four</li>
+        <li class="list-item">Five</li>
     </ul>
 </body>
 </html>
