--- a/02_project.html
+++ b/02_project.html
@@ -13,6 +13,7 @@
             align-items: center;
             height: 100vh;
             text-align: center;
+            font-size: x-large;
         }
     </style>
 </head>
