--- a/04_project.html
+++ b/04_project.html
@@ -13,7 +13,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      font-size: large;
+      font-size: x-large;
     }
   </style>
 </head>
