modified:   Js_Projects/06_randomColour.html

--- a/Js_Projects/06_randomColour.html
+++ b/Js_Projects/06_randomColour.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Start should change the Background color every second</h1>
+    <button>Start</button>
+    <button>Stop</button>
 </body>
 </html>
