modified:   Js_Projects/06_randomColour.html

--- a/Js_Projects/06_randomColour.html
+++ b/Js_Projects/06_randomColour.html
@@ -67,9 +67,9 @@
     };
 
     startBtn.addEventListener('click', function () {
-        // document.querySelector('.bg').innerHTML = "";
+        document.querySelector('.bg').innerHTML = "";
         if (!intervalValid) { // Prevent multiple intervals
-            intervalValid = setInterval(startChangingColor, 1000); // Start interval  
+            intervalValid = setInterval(startChangingColor, 200); // Start interval  
         }
     })
 
