modified:   one.html

--- a/one.html
+++ b/one.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!-- <h1>Dom Learning</h1>
+    <h1>Dom Learning</h1>
     <p id="para">This is a paragraph</p>
     <button id="btn">Click me</button>
     <script src="one.js"></script>
@@ -18,7 +18,7 @@
         <li class="list-item">Three</li>
         <li class="list-item">Four</li>
         <li class="list-item">Five</li>
-    </ul> -->
+    </ul>
 </body>
 
 <script>
