--- a/08_githubApi.html
+++ b/08_githubApi.html
@@ -17,8 +17,8 @@
         }
         .card{
             background-color: floralwhite;
-            height: 50vh;
-            width: 25vw;
+            height: 350px;
+            width: 325px;
             border-radius: 5%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             display: flex;
@@ -29,7 +29,6 @@
         .photo{
             height: 150px;
             width: 150px;
-            background-color: cadetblue;
             border-radius: 5%;
             margin-bottom: 3vh;
         }
