modified:   Js_Projects/08_githubApi.html

--- a/Js_Projects/08_githubApi.html
+++ b/Js_Projects/08_githubApi.html
@@ -25,12 +25,13 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            padding: 25px;
         }
         .photo{
             height: 150px;
             width: 150px;
             border-radius: 5%;
-            margin-bottom: 3vh;
+            margin-bottom: 2vh;
         }
         #github-photo{
             height: 100%;
